# hermipy

./: .exrc  .gitignore  .projections.json  CMakeLists.txt  Fokker-Planck.ipynb  LICENSE.md  Makefile  README.md  Session.vim  bistable.py  bu  coloured.py  config.py  equation.py  fokker-planck-1d.py  fokker-planck-2d-coloured.py  fokker-planck-2d-coloured.py.bak  fokker_planck_1d-stat.py  hermite.scm  integrate.c  integrate.cpp  integrate.py  integrator.cpp  mckean-vlasov.py  parameters.json  parameters.yaml  plot.py  run_cont_bistable.m  run_cont_bistable.m~  setup.py  spectral.py  steady_cont_bistable.m  steady_cont_bistable.m~  test  test.npy  test.py  test_spectral.py  yay.cxx
.ipynb_checkpoints/: Fokker-Planck-checkpoint.ipynb
backup/: comments.py  fokker-planck-1d.py  fokker_planck_1d-stat.py  test.py
cpp/: .gitignore  CMakeLists.txt  Makefile
cpp/src/hermite/: discretize.cpp  discretize.hpp  hermite.cpp  hermite.hpp  inner.cpp  inner.hpp  io.cpp  io.hpp  iterators.cpp  iterators.hpp  lib.cpp  lib.hpp  matrix.cpp  matrix.hpp  project.cpp  project.hpp  sparse.cpp  sparse.hpp  templates.cpp  templates.hpp  tensorize.cpp  tensorize.hpp  transform.cpp  transform.hpp  types.hpp  varf.cpp  varf.hpp
cpp/src/hermite/python/: converters.cpp  converters.hpp  module.cpp
cpp/src/scratchpad/: boost_numpy.cpp
cpp/src/tests/: test_multi_index.cpp  test_numpy.cpp  test_questions.cpp  test_spmat.cpp
data/: betas-down-white-noise.npy  betas-down.npy  betas-other-epsilon-down.npy  betas-other-epsilon-up.npy  betas-up-white-noise.npy  betas-up.npy  betas-zoom-up.npy  bifurcation.py  degree-difference.eps  epsilon=1o10-ms-up.npy  epsilon=1o20-betas-down.npy  epsilon=1o20-m0=-0.5-ms.npy  epsilon=1o20-m0=0.5-betas.npy  epsilon=1o40-betas-up.npy  epsilon=1o40-m0=-0.5-betas.npy  epsilon=1o40-m0=-0.5-ms.npy  epsilon=1o40-m0=0.5-ms.npy  errors-epsilon-0.03125.npy  errors-epsilon-0.0625.npy  errors-epsilon-0.1.npy  errors-epsilon-0.25.npy  errors-epsilon-1.0.npy  full_bifurcation.eps  ms-down-white-noise.npy  ms-down.npy  ms-up-white-noise.npy  ms-up.npy  ms-zoom-up.npy  plot.py  white-noise-betas-down.npy  white-noise-betas-up.npy  white-noise-ms-down.npy  white-noise-ms-up.npy
data/asymptotic/: asymptotic_bifurcation.py  asymptotic_bifurction.eps  betas-critical-harmonic.npy  betas-critical-ou.npy  betas-critical.npy  epsilon-error.eps  epsilons-critical-harmonic.npy  epsilons-critical-ou.npy  epsilons-critical.npy  error-epsilon.py  errors-epsilon-0.125.npy  errors-epsilon-0.5.npy
data/bistable-asymmetric/: bifurcation.py  epsilon=1o10-betas-down.npy  epsilon=1o10-betas-up.npy  epsilon=1o10-ms-down.npy  epsilon=1o20-betas-up.npy  epsilon=1o20-m0=-0.5-betas.npy  epsilon=1o20-m0=0.5-ms.npy  epsilon=1o20-ms-down.npy  epsilon=1o20-ms-up.npy  epsilon=1o40-betas-down.npy  epsilon=1o40-m0=0.5-betas.npy  epsilon=1o40-ms-down.npy  epsilon=1o40-ms-up.npy  full_bifurcation.eps  white-noise-betas-down.npy  white-noise-betas-up.npy
data/bistable-bistable/: bifurcation.py  epsilon=1o10-m0=-0.5-betas.npy  epsilon=1o10-m0=-0.5-ms.npy  epsilon=1o10-m0=0.5-betas.npy  epsilon=1o10-m0=0.5-ms.npy  epsilon=1o4-m0=-.75-betas.npy  epsilon=1o4-m0=-.75-ms.npy  epsilon=1o4-m0=.75-betas.npy  epsilon=1o4-m0=.75-ms.npy  epsilon=1o40-m0=-0.5-betas.npy  epsilon=1o40-m0=-0.5-ms.npy  epsilon=1o40-m0=0.5-betas.npy  epsilon=1o40-m0=0.5-ms.npy  full_bifurcation.eps  white-noise-ms-down.npy
data/bistable-harmonic/: asymptotic_bifurction.eps  betas-critical-harmonic.npy  betas-critical-ou.npy  bifurcation.py  (+27 more)
doc/: Makefile
examples/: .white.py@neomake_3078_29.py  asymptotic_bifurcation.py  asymptotic_coloured.py  asymptotic_harmonic.py  asymptotic_ou_bifurcation.py  bistable-bistable.py  bistable-nonsymmetric.py  bistable-quadratic.py  bistable.py  cahn-hilliard.py  coloured.py  config.py  convergence-epsilon.py  diffusion.py  example.py  fokker-planck.py  fokker_planck_mc_kean_vlasov_harmonic.py  harmonic.py  langevin.py  langevin_2d.py  ornstein.py  ornstein_time.py  plot.py  quadratic-quadratic.py  scratch.py  white.py
hermipy/: __init__.py  cache.py  comp_quad.py  compquad.py  conf.doxygen  core.py  equations.py  fourierquad.py  function.py  lib.py  operator.py  position.py  quad.py  series.py  settings.py  stats.py  varf.py
hermite/: .gitignore  cache.py  comp_quad.py  core.py  equations.py  function.py  hermite.py  lib.py  operator.py  position.py  quad.py  series.py  settings.py  stats.py  symlib.py  varf.py
libhermite/: .gitignore  CMakeLists.txt  Makefile  README.md  cache.py  equations.py  hermite.py  hermite_python.py  settings.py  stats.py  symlib.py  test.py  test_hermite.py  wrappers.py
libhermite/cpp/: .exrc  CMakeLists.txt  main  test.py
libhermite/cpp/src/: a.out  main.cpp  test.cpp
libhermite/cpp/src/hermite/: discretize.cpp  discretize.hpp  io.cpp  io.hpp  iterators.cpp  iterators.hpp  matrix.cpp  matrix.hpp  python.cpp  sparse.cpp  sparse.hpp  templates.cpp  templates.hpp  tensorize.cpp  tensorize.hpp  test.cpp  transform.hpp  types.cpp  types.hpp  varf.cpp  varf.hpp
libhermite/cpp/src/hermite/python/: converters.cpp  converters.hpp  module.cpp  python.cpp
libhermite/cpp/src/hermite/sparse-matrix/: SparseMatrix.cpp
libhermite/cpp/src/sparse-matrix/: SparseMatrix.h
libhermite/cpp/src/tests/: conversions.cpp  conversions.hpp  test_numpy.cpp  test_sparse.cpp  test_spmat.cpp
libhermite/src/hermite/: discretize.cpp  hermite.cpp  hermite.hpp  integrator.cpp  integrator.hpp  io.cpp  io.hpp  iterators.cpp  iterators.hpp  python.cpp  tags  templates.hpp  tensorize.cpp  tensorize.hpp  transform.cpp  transform.hpp  types.hpp  varf.cpp  varf.hpp
libhermite/src/hermite/helpers/: combinatorics.cpp  templates.hpp
libspectral/: .exrc  conf.doxygen  spectral.py  test.py  test_spectral.py
matlab/: command  run_cont_bistable.m  steady_cont_bistable.m
pkgs/: hermipy.scm
src/: main.cpp
tests/: .coverage  __init__.py  test_compquad.py  test_converters.py  test_core.py  test_equations.py  test_function.py  test_hermite.py  test_quad.py  test_series.py  test_tensorize_project.py
(+82 files in other folders)
